--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -21,6 +21,7 @@
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
+            android:transitionName="@string/image_transition_key"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
             android:background="@color/photo_placeholder" />
