--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -18,7 +18,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar">
-
+        <item name="android:windowExitTransition" tools:targetApi="lollipop">@transition/grid_exit</item>
+        <item name="android:windowReenterTransition" tools:targetApi="lollipop">@transition/re_enter_bottom</item>
     </style>
 
     <style name="Theme.Bacon.Detail">
